--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,13 +15,13 @@
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="WallpaperActivity"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@mipmap/ic_launcher"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.SET_WALLPAPER" />
